# LeeQ

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CLAUDE.md  Dockerfile  EPII_STANDARD.md  LICENSE  MIGRATION_GUIDE.md  README.md  README_chronicle_tools.md  chronicle_viewer.py  chronicle_viewer_example.py  documentation_update_summary.md  generate_chronicle_logs.py  index.html  leeq_experiment_documentation_plan.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docker.txt  requirements.txt  requirements_chronicle_viewer.txt  simulation_supported_experiments.md  sitemap.xml  test_chronicle_viewer.py  test_corrected_cw_spectroscopy.py  test_epii_qubit_mock.py  test_epii_simple.py  test_extended_data.py  test_extended_data_mock.py  validate_experiment_documentation.py
.github/workflows/: docker_image.yaml  docs.yml  test.yaml  test.yml  test_notebooks.yml
.vscode.example/: README.md
PRPs/: epii-implementation-plan.md  labchronicle-merge-execution.md  labchronicle-merge-plan.md  labchronicle-merge.md
benchmark/exp_recall/: EmbeddingSearch Benchmarking.ipynb  Embedding_benchmark_summary.ipynb  embedding_search_benchmarking.py  fix_code_check.py  simulated_setup.py
benchmark/inspection/: Inspection Benchmarking DRAG.ipynb  Inspection Benchmarking GMM.ipynb  Inspection_benchmark_summary.ipynb  benchmarks.py  experiments.py  run_all.sh  run_benchmarks.py  simulated_setup.py
chronicle_api_quick_reference/: index.html
chronicle_session_viewer/: index.html
ci_scripts/: generate_docs.py  lint.sh
code_reference/config/: index.html
configs/docker/: example_daemon.json
configs/epii/: hardware_lab1.json  minimal.json  simulation_2q.json  simulation_chronicle.json
dev_notes/: experiments_needing_high_level_simulation.md  high_level_simulation_current_status.md  high_level_simulation_implementation_plan.md  real_time_monitor_architecture.md  virtual_qubit_high_level_simulation.md
dev_notes/qeris/: .gitignore  01_core_principles.md  02_architecture.md  03_data_formats.md  04_mcp_interface.md  05_implementation_guide.md  06_adapter_examples.md  07_client_examples.md  08_reset_commands.md  09_parameter_management.md  10_experiment_discovery.md  11_realtime_monitoring.md  12_integration_guide.md  README.md  current_status.md  implementation_plan.md  leeq_adapter_full.py
development/architecture/: index.html
development/contributing/: index.html
development/testing/: index.html
development/troubleshooting/: index.html
docs/: chronicle_api_quick_reference.md  chronicle_session_viewer.md  epii-deployment-checklist.md  epii-operations-guide.md  index.md  quick_start.md  requirements.txt  tutorial.md  two_tone_spectroscopy.md
docs/code_reference/: config.md
docs/development/: architecture.md  contributing.md  testing.md  troubleshooting.md
docs/epii/: README.md  client-usage.md  deployment-guide.md  dynamic-discovery.md  overview.md  protocol.md  quick-reference.md  release-notes-v0.2.0.md  troubleshooting.md
docs/getting-started/: installation.md
docs/guide/: calibrations.md  concepts.md  experiments.md
docs/notebooks/: README.md
epii/: index.html
epii-deployment-checklist/: index.html
epii-operations-guide/: index.html
epii/client-usage/: index.html
epii/deployment-guide/: index.html
epii/dynamic-discovery/: index.html
epii/overview/: index.html
epii/protocol/: index.html
epii/quick-reference/: index.html
epii/troubleshooting/: index.html
examples/: chronicle_session_example.py  chronicle_viewer_troubleshooting.py
examples/epii/: README.md  calibration_client.py  chronicle_test_client.py  simple_client.py
getting-started/installation/: index.html
guide/calibrations/: index.html
guide/concepts/: index.html
guide/experiments/: index.html
leeq/: __init__.py  config.py  utils.py
leeq/backend/: backend_base.py
leeq/chronicle/: __init__.py  chronicle.py  core.py  decorators.py  logger.py  utils.py
leeq/compiler/: compiler_base.py  full_sequencing_compiler.py  individual_lpb_compiler.py
leeq/core/: __init__.py  base.py  context.py
leeq/epii/: __init__.py  client_helpers.py  config.py  daemon.py  experiments.py  parameters.py  serialization.py  service.py  utils.py
leeq/experiments/: __init__.py  experiments.py  sweeper.py
leeq/setups/: qubic_lbnl_setups.py  setup_base.py
leeq/theory/: utils.py
leeq/utils/: notebook.py  prompt.py  utils.py
notebooks/: README.md  epii_chronicle_example.ipynb  index.html
notebooks/Agent/: SingleQubitTuneUp.ipynb  TwoQubitTuneUp.ipynb  (+2 more)
quick_start/: index.html
scripts/: README-systemd.md  README_test_quick_start.md  README_tutorial_validation.md  check_outputs.py  chronicle_viewer.py  daemon-control.py  epii_chronicle_daemon.py  generate_api_docs.py  generate_tests.py  install-epii.sh  install-systemd-service.sh  leeq-epii-service.sh  migrate_aliases.py  notebook_test_config.yaml  notebook_test_runner.py  replace_print_with_logging.py  start-daemon.py  test-epii.sh  test-systemd-integration.sh  test_chronicle_integration.py  test_discovery.py  test_notebook_infrastructure.py  test_notebooks.py  test_quick_start.py  test_tutorial_notebooks.py  track_progress.sh  transform_imports.py  transform_notebook_imports.py  uninstall-systemd-service.sh  validate_discovery.py  validate_notebooks.py  validate_quality.py  validate_tutorial_steps.py  validation_criteria.md
search/: search_index.json
tests/: conftest.py
tutorial/: index.html
two_tone_spectroscopy/: index.html
(+472 files in other folders)
