[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "leeq"
version = "0.0.1"
description = "LeeQ is a Python library for operating quantum circuits experiments."
authors = ["Shuxiang Cao <shuxiang.cao@scao.me>"]
license = "MIT"
packages = [
    { include = "leeq" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"  # Adjust based on your Python version
scipy = "*"
matplotlib = "*"
matplotlib-inline = "*"
numpy = "<2.0.0"
plotly = "*"
dash = "*"
dash-bootstrap-components = "*"
qutip = "*"
scikit-learn = "*"
tqdm = "*"
h5py = "*"
decorator = "*"
pytest = "*"
fsspec = "*"
pyyaml = "*"
uncertainties = "*"
MinimalLLM = "*"
ipywidgets = "*"
kaleido = "*"
pandas = "*"
dill = "*"

# Git-based dependencies
labchronicle = {git = "https://github.com/ShuxiangCao/LabChronicle"}
k_agents = {git = "https://github.com/EvoEvolver/k_agents"}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
