[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "leeq"
version = "0.0.1"
description = "LeeQ is a Python library for operating quantum circuits experiments."
authors = ["Shuxiang Cao <shuxiang.cao@scao.me>"]
license = "MIT"
packages = [
    { include = "leeq" },
]

[tool.poetry.dependencies]
python = ">=3.10"  # Adjust based on your Python version
scipy = "*"
matplotlib = "*"
matplotlib-inline = "*"
numpy = "<2.0.0"
plotly = "*"
dash = "*"
dash-bootstrap-components = "*"
qutip = "*"
scikit-learn = "*"
tqdm = "*"
h5py = "*"
decorator = "*"
pytest = "*"
fsspec = "*"
pyyaml = "*"
uncertainties = "*"
markdownify = "*"
MinimalLLM = "*"
ipywidgets = "*"
kaleido = "*"
pandas = "*"
dill = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-jupyter = "*"

# Git-based dependencies
k_agents = {git = "https://github.com/EvoEvolver/k_agents"}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.ruff]
line-length = 127
target-version = "py310"
exclude = [".git", "__pycache__", "docs", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
